[gd_scene load_steps=10 format=2]

[ext_resource path="res://client/main_menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://client/main_menu/server_browser/ServerBrowser.tscn" type="PackedScene" id=2]
[ext_resource path="res://fugitive_header.webp" type="Texture" id=3]
[ext_resource path="res://client/HelpDialog.tscn" type="PackedScene" id=4]
[ext_resource path="res://godot_logo.png" type="Texture" id=5]
[ext_resource path="res://client/main_menu/main_menu_theme.ogg" type="AudioStream" id=6]
[ext_resource path="res://client/main_menu/ic_headphones.webp" type="Texture" id=7]
[ext_resource path="res://client/feedback/FeedbackDialog.tscn" type="PackedScene" id=8]
[ext_resource path="res://fugitive_theme.tres" type="Theme" id=9]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1024, 600 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
playerNamePath = NodePath("VBoxContainer/UsernamePanel/VBoxContainer/PlayerName")
serverIpPath = NodePath("ManualContainer/VBoxContainer/HBoxContainer/ServerIp")
serverPortPath = NodePath("ManualContainer/VBoxContainer/HBoxContainer/ServerPort")
versionLabelPath = NodePath("InfoContainer/VersionLabel")
joiningDialogPath = NodePath("JoiningDialog")
joinFailedDialogPath = NodePath("JoinFailedDialog")
badInputDialogPath = NodePath("BadInfoDialog")
lostConnectionDialogPath = NodePath("ConnectionLostDialog")
helpDialogPath = NodePath("HelpDialog")
menuMusicButtonPath = NodePath("OptionsContainer/MenuMusicButton")
menuMusicPlayerPath = NodePath("MainMenuMusicPlayer")
feedbackDialogPath = NodePath("FeedbackDialog")
crashDetectedDialogPath = NodePath("CrashDetectedDialog")

[node name="ManualContainer" type="PanelContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -138.0
margin_right = 448.0
margin_bottom = -8.0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ManualContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 432.0
margin_bottom = 122.0

[node name="ManualConnectLabel" type="Label" parent="ManualContainer/VBoxContainer"]
margin_right = 424.0
margin_bottom = 25.0
text = "Direct Connect:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ManualContainer/VBoxContainer"]
margin_top = 33.0
margin_right = 424.0
margin_bottom = 67.0
size_flags_horizontal = 3

[node name="ServerIp" type="LineEdit" parent="ManualContainer/VBoxContainer/HBoxContainer"]
margin_right = 256.0
margin_bottom = 34.0
size_flags_horizontal = 3
max_length = 128
clear_button_enabled = true
placeholder_text = "server address"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerPort" type="LineEdit" parent="ManualContainer/VBoxContainer/HBoxContainer"]
margin_left = 264.0
margin_right = 424.0
margin_bottom = 34.0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
align = 1
max_length = 5
clear_button_enabled = true
placeholder_text = "port"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectButton" type="Button" parent="ManualContainer/VBoxContainer"]
margin_top = 75.0
margin_right = 424.0
margin_bottom = 114.0
size_flags_vertical = 0
text = "Connect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserNameErrorDialog" type="AcceptDialog" parent="."]
margin_right = 256.0
margin_bottom = 75.0
popup_exclusive = true
dialog_text = "Player Name must be at least 3 charcters long."
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsContainer" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 256.0
margin_bottom = 182.0
rect_min_size = Vector2( 175, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="OptionsContainer"]
margin_right = 248.0
margin_bottom = 39.0
text = "Exit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpButton" type="Button" parent="OptionsContainer"]
margin_top = 47.0
margin_right = 248.0
margin_bottom = 86.0
text = "Help"

[node name="FeedbackButton" type="Button" parent="OptionsContainer"]
margin_top = 94.0
margin_right = 248.0
margin_bottom = 133.0
text = "Feedback"

[node name="MenuMusicButton" type="CheckButton" parent="OptionsContainer"]
margin_top = 141.0
margin_right = 248.0
margin_bottom = 221.0
pressed = true
text = "Music"

[node name="HeadphonesContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -208.0
margin_right = 373.0
margin_bottom = -160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeadphonesIcon" type="TextureRect" parent="HeadphonesContainer"]
margin_right = 48.0
margin_bottom = 48.0
texture = ExtResource( 7 )

[node name="HeadphonesLabel" type="Label" parent="HeadphonesContainer"]
margin_left = 56.0
margin_right = 359.0
margin_bottom = 48.0
size_flags_vertical = 5
text = "Headphones recommended"
align = 1
valign = 1

[node name="JoiningDialog" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.5
margin_top = -55.0
margin_right = 130.5
margin_bottom = 55.0
popup_exclusive = true
window_title = "Joining"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="JoiningDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="JoiningDialog/VBoxContainer"]
margin_top = 4.0
margin_right = 229.0
margin_bottom = 29.0
text = "Please wait..."

[node name="CancelButton" type="Button" parent="JoiningDialog/VBoxContainer"]
margin_top = 37.0
margin_right = 229.0
margin_bottom = 74.0
text = "Cancel"

[node name="JoinFailedDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.5
margin_top = -55.0
margin_right = 125.5
margin_bottom = 55.0
window_title = "Failed"
dialog_text = "Failed to join server."

[node name="BadInfoDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -146.0
margin_top = -55.0
margin_right = 146.0
margin_bottom = 55.0
window_title = "Bad Input"
dialog_text = "Check your IP and Port"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectionLostDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -190.0
margin_top = -55.0
margin_right = 190.0
margin_bottom = 55.0
window_title = "Connection Lost"
dialog_autowrap = true

[node name="HelpDialog" parent="." instance=ExtResource( 4 )]

[node name="InfoContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -64.0
margin_bottom = 148.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GodotLogo" type="TextureRect" parent="InfoContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VersionLabel" type="Label" parent="InfoContainer"]
margin_top = 72.0
margin_right = 64.0
margin_bottom = 97.0
text = "v0"
align = 2
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -8.0
margin_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernamePanel" type="PanelContainer" parent="VBoxContainer"]
margin_right = 250.0
margin_bottom = 83.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/UsernamePanel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 242.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerNameLabel" type="Label" parent="VBoxContainer/UsernamePanel/VBoxContainer"]
margin_right = 234.0
margin_bottom = 25.0
text = "Player Name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerName" type="LineEdit" parent="VBoxContainer/UsernamePanel/VBoxContainer"]
margin_top = 33.0
margin_right = 234.0
margin_bottom = 67.0
max_length = 16
clear_button_enabled = true
placeholder_text = "Enter Name"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerBrowser" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 91.0
margin_right = 500.0
margin_bottom = 391.0
rect_min_size = Vector2( 500, 300 )

[node name="MainMenuMusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -16.0
autoplay = true

[node name="TitleGraphic" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -256.0
margin_top = 8.0
margin_right = 256.0
margin_bottom = 108.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FeedbackDialog" parent="." instance=ExtResource( 8 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -347.5
margin_top = -249.0
margin_right = 347.5
margin_bottom = 249.0

[node name="CrashDetectedDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -284.0
margin_top = -149.0
margin_right = 284.0
margin_bottom = 149.0
theme = ExtResource( 9 )
window_title = "Crash Detected"
dialog_text = "It looks like Fugitive 3D did not shutdown properly last time.

It would be very helpful if you would send the crash logs to us! Thanks for helping make Fugitive better.

- Stumpy Dog Studios"
dialog_autowrap = true
[connection signal="pressed" from="ManualContainer/VBoxContainer/ConnectButton" to="." method="_on_ConnectButton_pressed"]
[connection signal="pressed" from="OptionsContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="OptionsContainer/HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="OptionsContainer/FeedbackButton" to="." method="_on_FeedbackButton_pressed"]
[connection signal="toggled" from="OptionsContainer/MenuMusicButton" to="." method="_on_MenuMusicButton_toggled"]
[connection signal="pressed" from="JoiningDialog/VBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="connect_to_server" from="VBoxContainer/ServerBrowser" to="." method="_on_ServerBrowser_connect_to_server"]
